--- a/src/main/webapp/Index.html
+++ b/src/main/webapp/Index.html
@@ -17,7 +17,7 @@
 <!-- inclusione eseguibile java --> 
 <script src="WebContent/js/bootstrap.bundle.min.js"></script>
 
-<!-- AO-->
+<!-- AOOO-->
 
 <nav class="navbar">
     <a href="#electronics">Elettronica</a>
