--- a/src/main/webapp/Index.html
+++ b/src/main/webapp/Index.html
@@ -20,7 +20,7 @@
 <!-- AOOO-->
 
 <nav class="navbar">
-    <a href="#electronics">Elettronica</a>
+    <a href="#electronics">Elettronica sas</a>
     <a href="#fashion">Moda</a>
     <a href="#home-garden">Casa e Giardino</a>
     <!-- Altre categorie -->
