--- a/src/main/webapp/Index.html
+++ b/src/main/webapp/Index.html
@@ -23,7 +23,7 @@
     <a href="#electronics">Elettronica sas</a>
     <a href="#fashion">Moda</a>
     <a href="#home-garden">Casa e Giardino aaaaPESCAa</a>
-    <!-- Altre categorie -->
+    <!-- Altre categorie PENE -->
 </nav>
 
 <form action="search.html" method="GET">
