--- a/src/main/webapp/Index.html
+++ b/src/main/webapp/Index.html
@@ -28,7 +28,7 @@
 
 <form action="search.html" method="GET">
     <input type="text" name="q" placeholder="Cerca prodotti...">
-    <button type="submit">Cerca</button>
+    <button type="submit">Cerca suca</button>
 </form>
 
 
