Pesca in deretano

--- a/src/main/webapp/Index.html
+++ b/src/main/webapp/Index.html
@@ -22,7 +22,7 @@
 <nav class="navbar">
     <a href="#electronics">Elettronica sas</a>
     <a href="#fashion">Moda</a>
-    <a href="#home-garden">Casa e Giardino aaaaPESCAa</a>
+    <a href="#home-garden">Casa e Giardino aaaaPESCAa in culo</a>
     <!-- Altre categorie PENE -->
 </nav>
 
