--- a/src/main/webapp/Index.html
+++ b/src/main/webapp/Index.html
@@ -3,13 +3,13 @@
 <head>
 <meta charset="ISO-8859-1">
 
-<title>E-COMMERCE TSW</title>
+<title>Home Page</title>
 
 <!-- inclusione css --> 
 <link rel="stylesheet" href="WebContent/css/bootstrap.min.css">
 
 <!-- inclusione file personalizzato per colori bianco e arancione css --> 
-<link rel="stylesheet" href="WebContentcss/style.css">
+<link rel="stylesheet" href="webContent/css/style.css" type="text/css">
 
 </head>
 <body>
@@ -19,17 +19,17 @@
 
 <!-- AOOO-->
 
-<nav class="navbar">
-    <a href="#electronics">Elettronica sas</a>
-    <a href="#fashion">Moda</a>
-    <a href="#home-garden">Casa e Giardino aaaaPESCAa in culo 23</a>
-    <!-- Altre categorie PENE -->
-</nav>
 
-<form action="search.html" method="GET">
-    <input type="text" name="q" placeholder="Cerca prodotti...">
-    <button type="submit">Cerca</button>
-</form>
+
+
+<div class="header">
+   
+	<h1>HOME DECOR </h1>
+
+</div>
+
+
+
 
 
 </body>
