--- a/WebContent/css/Index.html
+++ b/WebContent/css/Index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
 
 <title>Home Page</title>
 
@@ -9,7 +10,9 @@
 <link rel="stylesheet" href="WebContent/css/bootstrap.min.css">
 
 <!-- inclusione file personalizzato per colori bianco e arancione css --> 
-<link rel="stylesheet" href="webContent/css/style.css" type="text/css">
+<link rel="stylesheet" href="style.css" >
+
+
 
 </head>
 <body>
@@ -24,9 +27,24 @@
 
 <div class="header">
    
-	<h1>HOME DECOR </h1>
+    
+	
+	<a href="index.html" class="header-logo"></a>
+	
+	
+		<ul class="navbar">
+	     <li class="navbar_items"><a href="">items</a>
+	     <li class="navbar_items"><a href="">prodotto</a>
+	     <li class="navbar_items"><a href="">casa</a>
+		</ul>
+	
+	
+	
 
 </div>
+
+
+
 
 
 
